removed unused controller action and error in index-file

--- a/QuizClient/QuizClient/Views/Quiz/Index.cshtml
+++ b/QuizClient/QuizClient/Views/Quiz/Index.cshtml
@@ -14,7 +14,7 @@
 <div class="col-md-6" align="left">
     <dl class="dl-horizontal">
         <dt>
-            <p><b>Title:</b></p>
+            <b>Title:</b>
         </dt>
 
         <dd id="title">
@@ -22,7 +22,7 @@
         </dd>
 
         <dt>
-            <p><b>Imdb Rating:</b></p>
+            <b>Imdb Rating:</b>
         </dt>
 
         <dd>
@@ -30,7 +30,7 @@
         </dd>
 
         <dt>
-            <p><b>Rotten Tomatoes Rating:</b></p>
+            <b>Rotten Tomatoes Rating:</b>
         </dt>
 
         <dd>
@@ -38,7 +38,7 @@
         </dd>
 
         <dt>
-            <p><b>Ready to make a guess?:</b></p>
+            <b>Ready to make a guess?:</b>
         </dt>
 
         <dd>
@@ -47,7 +47,7 @@
         </dd>
 
         <dt>
-            <p><b>Clue 1: Get more information (-2 points):</b></p>
+            <b>Clue 1: Get more information (-2 points):</b>
         </dt>
 
         <dd>
@@ -55,7 +55,7 @@
         </dd>
         
         <dt>
-            <p><b>Clue 2: Get three options (-2 points):</b></p>
+            <b>Clue 2: Get three options (-2 points):</b>
         </dt>
 
         <dd>
@@ -64,6 +64,10 @@
     </dl>
     
     <table id="result" width="400"></table>
+    
+    <table width="400"><tr id="year">
+               
+           </tr></table>
  
 
 </div>
