publish profile to azure api apps

--- a/QuizClient/QuizClient/Views/Home/Index.cshtml
+++ b/QuizClient/QuizClient/Views/Home/Index.cshtml
@@ -2,30 +2,81 @@
     ViewBag.Title = "Home Page";
 }
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+<h2>Movie Quiz</h2>
+
+<div id="poster" class="col-md-6">
+
 </div>
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
+<div class="col-md-6">
+    <table>
+        
+        <tr><td><b>Score:</b></td>
+        <td id="score"></td></tr>
+        <tr>
+            <td>
+                <b>Title</b>
+            </td>
+            <td id="title"></td>
+        </tr>
+        <tr>
+            <td>
+                <b>Imdb Rating</b>
+            </td>
+            <td id="imdbRating"></td>
+        </tr>
+        <tr>
+            <td>
+                <b>Rotten Tomatoes Rating</b>
+            </td>
+            <td id="tomatoRating"></td>
+        </tr>
+    </table>
+
+    <dl>
+        <dt>
+            <b>Ready to make a guess?:</b>
+        </dt>
+
+        <dd>
+            <input type="text" id="answer" />
+            <input class="btn btn-default" type="submit" id="submitAnswer" value="Guess the year" />
+        </dd>
+
+        <dt>
+            <b>Clue 1: Get more information (-2 points):</b>
+        </dt>
+
+        <dd>
+            <input class="btn btn-default" type="button" value="Show more info" id="moreInfo" />
+        </dd>
+
+        <dt>
+            <b>Clue 2: Get three options (-2 points):</b>
+        </dt>
+
+        <dd>
+            <input class="btn btn-default" type="button" value="Show Options" id="yearOptions" />
+        </dd>
+    </dl>
+
+    <table id="result" width="400"></table>
+
+    <table width="400">
+        <tr id="year"></tr>
+    </table>
+
+
+    <input class="btn btn-default" type="button" value="Next Movie" id="nextMovie" />
+
+
 </div>
+
+
+
+
+
+
+
+
+
