--- a/QuizClient/QuizClient/Content/Site.css
+++ b/QuizClient/QuizClient/Content/Site.css
@@ -1,6 +1,8 @@
 ﻿body {
     padding-top: 50px;
     padding-bottom: 20px;
+    background-color: #202020;
+    color: whitesmoke;
 }
 
 /* Set padding to keep content from hitting the edges */
@@ -12,12 +14,39 @@
 /* Override the default bootstrap behavior where horizontal description lists 
    will truncate terms that are too long to fit in the left column 
 */
+
+
+
 .dl-horizontal dt {
     white-space: normal;
 }
 
 #poster {
     text-align: right;
+}
+
+#ratings {
+    margin: 10px;
+}
+
+.ratingLogo {
+    width: 20px;
+}
+
+.movieHeader {
+    list-style-type: none;
+    font-size: 15px;
+    font-weight: bold;
+}
+
+    .movieHeader li {
+        display: inline;
+        padding-right: 5px;
+    }
+
+#title {
+    font-size: 15px;
+    font-weight: bold;
 }
 
 #nextMovie {
