--- a/QuizClient/QuizClient/Views/Quiz/Index.cshtml
+++ b/QuizClient/QuizClient/Views/Quiz/Index.cshtml
@@ -1,8 +1,4 @@
-﻿
-
-<h2>Movie Quiz</h2>
-
-<div id="poster" class="col-md-6">
+﻿<div id="poster" class="col-md-6">
 
 </div>
 
@@ -16,13 +12,13 @@
         </tr>
         <tr>
             <td>
-                <b>Imdb Rating</b>
+                <img src="~/img/imdb-2-icon.png"/>
             </td>
             <td id="imdbRating"></td>
         </tr>
         <tr>
             <td>
-                <b>Rotten Tomatoes Rating</b>
+                <img src="~/img/RT_logo.png"/>
             </td>
             <td id="tomatoRating"></td>
         </tr>
