show correct/wrong answer

--- a/QuizClient/QuizClient/Views/Home/Index.cshtml
+++ b/QuizClient/QuizClient/Views/Home/Index.cshtml
@@ -26,7 +26,7 @@
         </tr>
     </table>
 
-    <dl>
+    <dl id="clues">
         <dd>
             <input type="text" id="answer" placeholder="Enter year YYYY" />
             <input class="btn btn-default" type="submit" id="submitAnswer" value="OK" />
@@ -48,6 +48,7 @@
             <input class="btn btn-default" type="button" value="Show Options" id="yearOptions" />
         </dd>
     </dl>
+    <div id="rightOrWrongGuess"></div>
 
     <table id="result" width="400"></table>
 
