Jens sista tisdag

--- a/QuizClient/QuizClient/Views/Home/Index.cshtml
+++ b/QuizClient/QuizClient/Views/Home/Index.cshtml
@@ -31,21 +31,11 @@
             <input type="text" id="answer" placeholder="Enter year YYYY" />
             <input class="btn btn-default" type="submit" id="submitAnswer" value="OK" />
         </dd>
-
-        <dt>
-            <b>Clue 1: Get more information (-2 points):</b>
-        </dt>
-
         <dd>
-            <input class="btn btn-default" type="button" value="Show more info" id="moreInfo" />
+            <input class="btn btn-default" type="button" value="Show Clue info" id="moreInfo" />
         </dd>
-
-        <dt>
-            <b>Clue 2: Get three options (-2 points):</b>
-        </dt>
-
         <dd>
-            <input class="btn btn-default" type="button" value="Show Options" id="yearOptions" />
+            <input class="btn btn-default" type="button" value="3 Options" id="yearOptions" />
         </dd>
     </dl>
     <div id="rightOrWrongGuess"></div>
