--- a/QuizClient/QuizClient/Views/Home/Rules.cshtml
+++ b/QuizClient/QuizClient/Views/Home/Rules.cshtml
@@ -6,28 +6,31 @@
 <h2>Rules</h2>
 
 <div>
-    <b>Goal:</b> Score as many points as possible by guessing the release year of 20 random movies from the IMDB top 250.
-    <b>Rules:</b>
-    <li>
-        <ul>
+    <b>Goal</b> 
+    <ul><li>Score as many points as possible by guessing the release year of 20 random movies from the IMDB top 250.</li></ul>
+    <b>Rules</b>
+
+    <ul>
+        <li>
             Make a correct guess without showing any clues and get maximum score, 10 points.
-        </ul>
-        <ul>
+        </li>
+        <li>
             A close guess within a 5 year range: 5 points.
-        </ul>
-        <ul>
+        </li>
+        <li>
             Clue 1 button displays more information such as actors, director, plot etc. It also opens up the possibility to show clue 2. Correct guess: 8 points, close guess: 3 points.
-        </ul>
-        <ul>
-            Clue 2 button narrows your guess down to three options. Correct guess: 5 points.
-        </ul>
-        <ul>
+        </li>
+        <li>
+            Clue 2 button narrows your guess down to three options. Correct guess: 3 points.
+        </li>
+        <li>
             After game is finished, send score and initals to our score board. Top then scores will make it to the "Hall of fame".
-        </ul>
-        <ul>
-           No cheating allowed!
-        </ul>
-    </li>
+        </li>
+        <li>
+            No cheating allowed!
+        </li>
+    </ul>
+
 
 
 </div>
