--- a/QuizClient/QuizClient/Views/Shared/_Layout.cshtml
+++ b/QuizClient/QuizClient/Views/Shared/_Layout.cshtml
@@ -21,8 +21,8 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     @*<li>@Html.ActionLink("Home", "Index", "Home")</li>*@
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Rules", "Rules", "Home")</li>
+                    <li>@Html.ActionLink("API", "Api", "Home")</li>
                 </ul>
             </div>
         </div>
@@ -30,8 +30,7 @@
     <div class="container body-content">
         @RenderBody()
         <hr />
-        <footer>
-        </footer>
+       
     </div>
 
     @Scripts.Render("~/bundles/jquery")
