high score list

--- a/QuizClient/QuizClient/Views/Shared/_Layout.cshtml
+++ b/QuizClient/QuizClient/Views/Shared/_Layout.cshtml
@@ -20,9 +20,10 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    @*<li>@Html.ActionLink("Home", "Index", "Home")</li>*@
+                    <li>@Html.ActionLink("New Game", "Index", "Home")</li>
                     <li>@Html.ActionLink("Rules", "Rules", "Home")</li>
                     <li>@Html.ActionLink("API", "Api", "Home")</li>
+                    <li>@Html.ActionLink("Hall of Fame", "HighScore", "Home")</li>
                 </ul>
             </div>
         </div>
