api post controller

--- a/QuizClient/QuizClient/Views/Home/Api.cshtml
+++ b/QuizClient/QuizClient/Views/Home/Api.cshtml
@@ -39,7 +39,7 @@
         Returns Top 10 current high scores with name and score.
     </div>
     <div class="col-md-4">
-        POST randommovie/postscore/{score}
+        POST randommovie/
     </div>
     <div class="col-md-8">
         Posts the final result after 20 rounds to the score board. <br/>
